[gd_scene load_steps=3 format=3 uid="uid://518ovckolr5k"]

[ext_resource type="Script" path="res://GUI/Menus/volume_slider.gd" id="1_xs3ss"]
[ext_resource type="AudioStream" uid="uid://d1j1lh2sgbu2k" path="res://music/Music_Basic.mp3" id="2_b3mpk"]

[node name="Volume" type="HBoxContainer"]
custom_minimum_size = Vector2(250, 35)
alignment = 1
script = ExtResource("1_xs3ss")

[node name="BusName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeControl" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b3mpk")

[connection signal="drag_ended" from="VolumeControl" to="." method="_on_volume_control_drag_ended"]
[connection signal="drag_started" from="VolumeControl" to="." method="_on_volume_control_drag_started"]
